--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -6,5 +6,9 @@ html, body, #app {
 }
 
 .el-breadcrumb {
-    margin-bottom: 20px;
+    margin-bottom: 15px;
+}
+
+.el-pagination {
+    margin-top: 15px;
 }
